--- a/Server/package.json
+++ b/Server/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "dotenv": "^16.4.5",
     "express": "^4.19.0",
+    "express-rate-limit": "^7.2.0",
     "needle": "^3.3.1"
   },
   "devDependencies": {
